un titlu mai bun

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+lang: ro-RO
+title: Curs online de programare în Golang, sau pe scurt Go
+description: oferit gratis de Asociația unPi pentru Școlari (unpi.ro) 
 theme: jekyll-theme-hacker
