--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 lang: ro-RO
 title: Curs online de programare în Golang, sau pe scurt Go
-description: oferit gratis de Asociația unPi pentru Școlari (unpi.ro) 
+description: oferit gratis de Asociația unPi pentru Școlari (unpi.ro), pentru copii și adulți
 theme: jekyll-theme-hacker
